<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">WeatherApp</string>
    <string name="feels_like">Feels like</string>
    <string name="today">Today</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="uv_index">UV Index</string>
    <string name="title_today">Today</string>
    <string name="title_weekly">Weekly</string>
    <string name="title_share">Share</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Weather</string>
    <string name="nav_header_subtitle">delaroy4u@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="settings_city_hint">City</string>
    <string name="settings_forecasts_number_hint">Number of Days</string>
    <string name="settings_ok_button">OK</string>
    <string name="settings_cancel_button">CANCEL</string>

    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u2103</string>
    <string name="format_full_friendly_date"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g></string>
    <string name="tomorrow">Tomorrow</string>
    <string name="format_wind_kmh"> <xliff:g id="speed">%1$1.0f</xliff:g> km/h</string>

</resources>